tests/ui/parser/doc-before-struct-rbrace-2.stderr
error[E0585]: found a documentation comment that doesn't document anything
  --> $DIR/doc-before-struct-rbrace-2.rs:2:11
   |
LL |     a: u8 /// document
   |           ^^^^^^^^^^^^
   |
   = help: doc comments must come before what they document, if a comment was intended use `//`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0585`.
